2000-11-06 19:10:14  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* rfc2231.el (rfc2231-encode-string): Use us-ascii if charset is nil.

2000-11-06 18:17:53  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-article-encrypt): New function.
	(gnus-article-encrypt-protocol-alist): New variable.
	(gnus-article-encrypt-protocol): New variable.
	* mml2015.el (mml2015-self-encrypt): New function.
	(mml2015-mailcrypt-encrypt): Set mc-pgp-always-sign.

2000-11-06 16:02:52  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-uu.el (mm-uu-gpg-key-skip-to-last): New function.
	(mm-uu-pgp-key-extract): Use application/pgp-keys, don't snarf,
	let mailcap do it.
	* mml2015.el: Remove snarf code.
	* mm-decode.el: Remove snarf code.

2000-11-06 14:03:10  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mml.el (mml-insert-mml-markup): Ignore internal stuff.
	(mml-insert-mime): Understand gnus-decoded.
	(mime-to-mml): New parameter handles.
	* gnus-art.el (gnus-mime-save-part-and-strip): Use it.
	* gnus-sum.el (gnus-summary-edit-article): Add argument `3'.

2000-11-06 13:51:37  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-decode.el (mime-security): New group.
	(mm-verify-function-alist): Add test function.
	(mm-decrypt-function-alist): Ditto.
	(mm-snarf-option): Set default value as nil.
	(mm-find-part-by-type): Recursive parameter.
	(mm-possibly-verify-or-decrypt): Support draft-ietf-openpgp-multsig.
	* mml2015.el: Support draft-ietf-openpgp-multsig.

2000-11-06 13:01:27  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-art.el (gnus-mime-view-part-as-charset): New function.
	(gnus-article-view-part-as-charset): New function.

2000-11-05 22:34:07  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-decode.el (mm-verify-option): Default value.
	(mm-possibly-verify-or-decrypt): Dealing with broken messages.

2000-11-05 15:06:05  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnvirtual.el (nnvirtual-request-expire-articles): Uncompress range.

2000-11-05  Simon Josefsson  <sj@extundo.com>
